--- a/index.html
+++ b/index.html
@@ -139,6 +139,31 @@
     <!-- "reach out" section -->
     <section>
         <h2>Reach Out</h2>
+        <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.995672894929!2d-117.48633715!3d34.043982100000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcb4cc17b261cf%3A0x90d83f667b436f4c!2s14520%20Village%20Dr%2C%20Fontana%2C%20CA%2092337!5e0!3m2!1sen!2sus!4v1651550620412!5m2!1sen!2sus" 
+                width="400" 
+                height="400" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                  Any questions or concerns before signing up?
+                  <br />
+                  Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br/>
+                    Some Town, Ca <br/>
+                    12345<br />
+                    P: 555.RUN.BUDZ (555.786.2839)<br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
+        </div>
     </section>
     <!-- footer -->
     <footer>
