--- a/index.html
+++ b/index.html
@@ -137,12 +137,10 @@
         </article>
     </section>
     <!-- "reach out" section -->
-    <section>
-        <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.995672894929!2d-117.48633715!3d34.043982100000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcb4cc17b261cf%3A0x90d83f667b436f4c!2s14520%20Village%20Dr%2C%20Fontana%2C%20CA%2092337!5e0!3m2!1sen!2sus!4v1651550620412!5m2!1sen!2sus" 
-                width="400" 
-                height="400" 
                 style="border:0;" 
                 allowfullscreen="" 
                 loading="lazy" 
