--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                    <textarea id="contact-message" placeholder="Message"></textarea>
                    <button type="submit">Submit</button>
                 </form>
-            </div>End of code snippet
+            </div>
             <div>
                 <h3>Run Buddy</h3>
                 <p>
