--- a/index.html
+++ b/index.html
@@ -73,14 +73,20 @@
     </section>
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">What We Do</h2>
-        <p>
-            butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-        </p>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">What We Do</h2>
+        </div>
+        <div class="flex-row">
+            <p>
+                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+            </p>
+        </div>
     </section>
     <!-- "what you do" section -->
     <section id="what-you-do" class="steps">
-        <h2 class="section-title secondary-border">What You Do</h2>
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">What You Do</h2>
+        </div>
         <div>
             <img src="./assets/images/step-1.svg" alt="" />
             <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -104,7 +110,9 @@
     </section>
     <!-- "meet the trainers" section -->
     <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">Meet The Trainers</h2>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+        </div>
         <article class="trainer">
             <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
             <div class="trainer-bio text-left">
@@ -128,7 +136,6 @@
             </div>
             <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
         </article>
-  
         <!-- third trainer bio -->
         <article class="trainer">
             <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
@@ -144,7 +151,9 @@
     </section>
     <!-- "reach out" section -->
     <section id="reach-out" class="contact">
-        <h2 class="section-title secondary-border">Reach Out</h2>
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">Reach Out</h2>
+        </div>
         <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.995672894929!2d-117.48633715!3d34.043982100000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcb4cc17b261cf%3A0x90d83f667b436f4c!2s14520%20Village%20Dr%2C%20Fontana%2C%20CA%2092337!5e0!3m2!1sen!2sus!4v1651550620412!5m2!1sen!2sus" 
                 style="border:0;" 
